[package]
name = "paysec"
version = "0.0.2"
edition = "2021"
authors = ["David Schmid <david.schmid@mailbox.org>"]
description = "Rust library related to payment security standards."
license = "GPL-3.0"
repository = "https://github.com/5n00py/paysec"

[dependencies]
hex = "0.4.3"
soft-aes = "0.2.2"
